--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -709,9 +709,10 @@ ul {
   left: 0;
 }
 .social .header {
+  display: flex;
   width: 100%;
   height: 100%;
-  padding: 50px;
+  padding: 50px 50px 60px 50px;
 }
 .social .header:after {
   background-size: 40px 26px;
@@ -730,15 +731,21 @@ ul {
 .social .next-event__description {
   padding: 30px 50px;
 }
+.social .next-event__actions {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 .social .next-event__action__learn {
   width: 100%;
   line-height: 160%;
   padding-top: 15px;
 }
 .social__message {
-  float: left;
+  position: relative;
+  flex: 1;
   margin: 0 0 0 50px;
-  width: 815px;
   font-size: 38px;
   line-height: 45px;
 }
